# barebones-python-module

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  cli-reference.md  extending.md  persistence.md  quickstart.md
scripts/: scaffold_service.py
src/: conftest.py
src/myapp/: __init__.py
src/myapp/cli/: main.py
src/myapp/services/: __init__.py
src/myapp/services/example/: __init__.py  api.py  cli.py  schemas.py
src/myapp/services/example/storage/: __init__.py  json_adapter.py  sqlite_adapter.py
src/myapp/services/example/tests/: test_api.py  test_cli.py  test_schemas.py  test_storage.py
src/myapp/services/recipes/: __init__.py  api.py  cli.py  schemas.py
src/myapp/services/recipes/storage/: __init__.py  json_adapter.py  sqlite_adapter.py
src/myapp/services/recipes/tests/: test_api.py  test_cli.py  test_schemas.py  test_storage.py
src/myapp/shared/: __init__.py  config.py  logging.py  schemas.py
src/myapp/shared/persistence/: __init__.py  base.py  json_store.py  sqlite_store.py
ui/: streamlit_app.py
