[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myapp"
version = "0.1.0"
description = "A microservice-friendly Python template — fork, extend, ship."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["template", "microservice", "cli", "pydantic", "click"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.30"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8",
    "mypy>=1.0",
]

[project.urls]
Repository = "https://github.com/OWNER/myapp"
Documentation = "https://github.com/OWNER/myapp/tree/main/docs"
Issues = "https://github.com/OWNER/myapp/issues"

[project.scripts]
project = "myapp.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/myapp"]

# ---------- tool configs ----------

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["myapp"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["myapp"]
mypy_path = ["src"]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
